// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent can accept a function to fetch the data 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <div class="table-component__message">
    </div>
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent can add extra classes to the table, the cells and the headers 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table my-table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head my-thead">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort my-header"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body my-tbody">
          <tr>
            <td class="my-cell">
              John
            </td>
          </tr>
          <tr>
            <td class="my-cell">
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent can display nested properties 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent can mount 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent can update columns 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent can update columns 2`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              Something else
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent has an prop to disable the caption 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <!---->
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent has an prop to disable the filter 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent supports a named slot to display a tfoot section 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
          <tr>
            <td>
              Name count:
            </td>
            <td>
              2
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent supports a scoped slot inside the table column 1`] = `

<div id="app">
  <div class="table-component">
    <div class="table-component__filter">
      <input type="text"
             placeholder
             class="table-component__filter__field"
      >
      <!---->
    </div>
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              First name
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John slot
            </td>
          </tr>
          <tr>
            <td>
              Paul slot
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent will use the property name as a column heading if label is not set 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
              firstName
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;

exports[`TableComponent won't use the property name as a column heading if label is an empty string 1`] = `

<div id="app">
  <div class="table-component">
    <!---->
    <div class="table-component__table-wrapper">
      <table class="table-component__table">
        <caption role="alert"
                 aria-live="polite"
                 class="table-component__table__caption"
        >
          Table not sorted
        </caption>
        <thead class="table-component__table__head">
          <tr>
            <th role="columnheader"
                aria-sort="none"
                class="table-component__th table-component__th--sort"
            >
            </th>
          </tr>
        </thead>
        <tbody class="table-component__table__body">
          <tr>
            <td>
              John
            </td>
          </tr>
          <tr>
            <td>
              Paul
            </td>
          </tr>
        </tbody>
        <tfoot>
        </tfoot>
      </table>
    </div>
    <!---->
    <div style="display: none;">
      <!---->
    </div>
  </div>
</div>

`;
